another section added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,48 @@
         </section>
 
         <!-- forth section -->
-        <section>
+        <section class="forth-section">
+            <div class="section-things">
+                <h3>THE BEST GIFTS</h3>
+                <h2>Our Awesome Portfolio</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod.</p>
+
+
+            </div>
+
+            <div class="gift-images1">
+               <div class="img1">
+                <img src="images/Rectangle 3.png" alt="">
+               </div>
+
+               <div class="img2">
+                <img src="images/Rectangle 4.png" alt="">
+               </div>
+
+               <div class="img3">
+                <img src="images/Rectangle 5.png" alt="">
+               </div>
+
+
+            </div>
+
+
+            <div class="gift-images2">
+                <div class="img4">
+                 <img src="images/Rectangle 6.png" alt="">
+                </div>
+ 
+                <div class="img5">
+                 <img src="images/Rectangle 7.png" alt="">
+                </div>
+ 
+                <div class="img6">
+                 <img src="images/Rectangle 8.png" alt="">
+                </div>
+ 
+ 
+             </div>
 
         </section>
 
@@ -76,6 +117,8 @@
 
 
     </main>
+
+
 </body>
 
 </html>
