bonus-section added

--- a/index.html
+++ b/index.html
@@ -46,9 +46,27 @@
             </div>
         </section>
 
-        <!-- third section -->
-        <section>
+        <!-- Bonus section -->
+        <section class="bonus-section">
+            <div class="bonus-left">
+                <h3>NEW BEST OFFER</h3>
+                <h2>Coming Soon</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod.</p>
+            </div>
 
+            <div class="bonus-image">
+                <img src="images/Ellipse 1.png" alt="">
+            </div>
+
+            <div class="bonus-right">
+                <h2>2024</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="images/Group 96.png" alt="">
+
+            </div>
+
+            
         </section>
 
         <!-- forth section -->
@@ -150,7 +168,7 @@
 
             <div class="copyright">
                 <p>2017, All Rights Reserved.</p>
-                <p>Unsubscribed</p>
+                <p>Unsubscribe</p>
 
             </div>
                     
