extra section added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
             </div>
         </section>
 
+        <!-- extra-section -->
+        <section class="PDT">
+            
+
+                <div class="PDT-content">
+                    <h3> <span class="red">Place:</span> New Park Hotel </h3>
+
+                    <h3><span class="red"> Date:</span> 31 December Night 2023</h3>
+                    <h3> <span class="red">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+
+                    <button class="PDT-button ">Join Now</button>
+
+                </div>
+                
+        </section>
+
         <!-- Bonus section -->
         <section class="bonus-section">
             <div class="bonus-left">
