--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
 <body>
     <header>
-        <div class="banner-container">
-            <div class="background-image"></div>
-            <div class="text-container">
-                <h4>Happy New Year</h4>
-                <h1>New Year Party Celebration</h1>
-            </div>
+
+        <div class="banner">
+            <h2>Happy New Year</h2>
+            <h1> New Year Party Celebration </h1>
+
+
         </div>
+
+
     </header>
 
     <main>
@@ -143,7 +145,7 @@
                     sodales risus ut pellentesque vel euismod.</h5>
                 <form>
                     <input type="email" placeholder="user@gmail.com" name="" id="">
-                    <button>Subscribe</button>
+                    <input type="submit" value="Subscribe">
                 </form>
 
             </div>
